# graphics-programming

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
assignment/: Assigment.cpp  Assigment.h  CMakeLists.txt  README.md  main.cpp
assignment/resources/shaders/: cubeFSSrc.glsl  cubeVSSrc.glsl  gridFSSrc.glsl  gridVSSrc.glsl
exam/: CMakeLists.txt  Exam.cpp  Exam.h  README.md  main.cpp
exam/resources/shaders/: cubeFSSrc.glsl  cubeVSSrc.glsl  gridFSSrc.glsl  gridVSSrc.glsl
framework/: CMakeLists.txt
framework/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  OrthographicCamera.h  PerspectiveCamera.h
framework/GLFWApplication/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.h  errorHandling.h
framework/GeometricTools/: CMakeLists.txt  GeometricTools.h
framework/Rendering/: BufferLayout.h  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  RenderCommands.h  ShadersDataTypes.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
framework/Shaders/: CMakeLists.txt  Shader.cpp  Shader.h
framework/Textures/: CMakeLists.txt  TextureManager.cpp  TextureManager.h
labs/: CMakeLists.txt  Lab.h  README.md  main.cpp
labs/lab1/: CMakeLists.txt  Lab1.cpp  Lab1.h  main.cpp  shaders.h
labs/lab1/resources/shaders/: FSSrc.glsl  VSSrc.glsl
labs/lab2/: CMakeLists.txt  Lab2.cpp  Lab2.h  main.cpp
labs/lab2/resources/shaders/: VSSrc.glsl  cubeFSSrc.glsl
labs/lab3/: CMakeLists.txt  Lab3.cpp  Lab3.h  main.cpp
labs/lab3/resources/shaders/: cubeVSSrc.glsl
labs/lab4/: CMakeLists.txt  Lab4.cpp  Lab4.h  main.cpp
labs/lab4/resources/shaders/: cubeVSSrc.glsl  gridFSSrc.glsl  gridVSSrc.glsl
labs/lab5/: CMakeLists.txt  Lab5.cpp  Lab5.h  main.cpp
labs/resources/shaders/: cubeFSSrc.glsl  cubeVSSrc.glsl  gridFSSrc.glsl  gridVSSrc.glsl  outlineVSSrc.glsl
